--- a/css/main.css
+++ b/css/main.css
@@ -1588,9 +1588,9 @@ textarea {
   list-style: none;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .style-chyld {
@@ -1638,6 +1638,8 @@ textarea {
 }
 
 .title-menu_function {
+  padding-left: 24px;
+  padding-right: 24px;
   background-color: rgba(33, 150, 243, 0.9);
   -webkit-transform: translateY(100%);
           transform: translateY(100%);
@@ -1645,6 +1647,27 @@ textarea {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 767px) {
+  .title-menu_function {
+    padding-top: 82px;
+    padding-bottom: 77px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .title-menu_function {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .title-menu_function {
+    padding-top: 63px;
+    padding-bottom: 63px;
+  }
 }
 
 .title-menu_item {
@@ -1655,23 +1678,7 @@ textarea {
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
-  padding-left: 24px;
-  padding-right: 24px;
   color: #ffffff;
-}
-
-@media screen and (max-width: 767px) {
-  .title-menu_item {
-    padding-top: 82px;
-    padding-bottom: 77px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .title-menu_item {
-    padding-top: 49px;
-    padding-bottom: 49px;
-  }
 }
 
 .style-title {
