--- a/sass/components/mobile/_portfolio-projeckt.scss
+++ b/sass/components/mobile/_portfolio-projeckt.scss
@@ -17,7 +17,7 @@
   margin: -15px;
   list-style: none;
   flex-wrap: wrap;
-  display: inline-flex;
+  display: flex;
 
   
 }
@@ -60,12 +60,29 @@
 
 .title-menu_function {
   
-  
+  padding-left: 24px;
+  padding-right: 24px;
 
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (max-width:767px){
+    padding-top: 82px;
+    padding-bottom: 77px;
+     
+  }
+
+  @media screen and (min-width:768px){
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
+
+  @media screen and (min-width:1200px){
+    padding-top: 63px;
+    padding-bottom: 63px;
+  }
 
   
 }
@@ -80,22 +97,12 @@
 
   letter-spacing: 0.03em;
 
-  padding-left: 24px;
-  padding-right: 24px;
+ 
   
 
   color: #ffffff;
 
-  @media screen and (max-width:767px){
-    padding-top: 82px;
-    padding-bottom: 77px;
-     
-  }
-
-  @media screen and (min-width:768px){
-    padding-top: 49px;
-    padding-bottom: 49px;
-  }
+  
 }
 
 .style-title {
