--- a/css/main.css
+++ b/css/main.css
@@ -1242,7 +1242,7 @@ textarea {
   height: 24px;
   margin-left: 12px;
   background-repeat: no-repeat;
-  background-image: url(/images/send.svg);
+  background-image: url(../images/send.svg);
 }
 
 .backdrop {
