--- a/sass/components/mobile/_footer-form.scss
+++ b/sass/components/mobile/_footer-form.scss
@@ -84,7 +84,7 @@
               margin-left: 12px;
               
               background-repeat: no-repeat;
-              background-image: url(/images/send.svg);
+              background-image: url(../images/send.svg);
             }
           
         } 
