--- a/sass/components/portfolio/_portfolio-projeckt.scss
+++ b/sass/components/portfolio/_portfolio-projeckt.scss
@@ -1,103 +1,130 @@
 
 .projeckt {
-  padding-bottom: 94px;
+  padding-top: 40px;
+  padding-bottom: 60px;
 
-  .portfolio-style {
-      padding: 0;
-      margin: 0;
-      list-style: none;
-      flex-wrap: wrap;
-      display: flex;
+  @media screen and (min-width:768px){
+    padding-top: 14px; 
+ }
 
-       & .style-chyld {
-          position: relative;
-          margin-right: 30px;
-          margin-bottom: 30px;
-          border: 1px solid #eeeeee;
-        
-          width: 370px;
+}
 
-          &:nth-child(3n) {
-              margin-right: 0;
-            }
 
-            &:nth-last-child(-n + 3) {
-              margin-bottom: 0;
-            }
+.portfolio-style {
+  padding: 0;
+  margin: -15px;
+  list-style: none;
+  flex-wrap: wrap;
+  display: flex;
+  
+  
+}
 
-            .title-menu {
-              width: 354px;
-              height: 294px;
-              position: absolute;
-              overflow: hidden;
+.style-chyld {
+  
+  position: relative;
+  margin: 14px;
+  border: 1px solid #eeeeee;
 
-              .title-menu_function {
-                  padding-left: 55px;
-                  padding-right: 55px;
-                  padding-top: 65px;
-                  padding-bottom: 65px;
-                  background-color: rgba(33, 150, 243, 0.9);
-                
-                  transform: translateY(100%);
-                  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   &:hover {
+    border: 1px solid #eeeeee;
+    box-sizing: border-box;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 
-                  .title-menu_item {
-                      margin: 0;
-                      font-family: Roboto;
-                      font-style: normal;
-                      font-weight: normal;
-                      font-size: 18px;
-                      line-height: 1.55;
-                    
-                      letter-spacing: 0.03em;
-                    
-                      color: #ffffff;
-                    }
-                }
+  &:hover .title-menu_function {
+    transform: translateY(0);
+  }
 
-                
-            }
+ }
 
-            .style-title {
-              
-              padding-top: 20px;
-              padding-left: 24px;
-              font-family: Roboto;
-              font-style: normal;
-              font-weight: bold;
-              font-size: 18px;
-              line-height: 2;
-              margin-top: 0;
-              margin-bottom: 4px;
-              color: $title-color;
-              letter-spacing: 0.06em;
-            }
+.title-menu {
+  position: absolute;
+  overflow: hidden;
 
-            .text-item {
-              padding-left: 24px;
-              padding-bottom: 20px;
-              margin: 0;
-            
-              font-family: Roboto;
-              font-style: normal;
-              font-weight: normal;
-              font-size: 16px;
-              line-height: 1.87;
-              color: $main-text-color;
-            
-              letter-spacing: 0.03em;
-            }
+ 
+}
 
-            &:hover {
-              border: 1px solid #eeeeee;
-              box-sizing: border-box;
-              box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-                1px 4px 6px rgba(0, 0, 0, 0.16);
-            }
+.title-menu_function {
+  
+  background-color: rgba(33, 150, 243, 0.9);
 
-            &:hover .title-menu_function {
-              transform: translateY(0);
-            }
-        }
-    }
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width:320px){
+    padding: 10px;
+  }
+
+  @media screen and (min-width:480px) and (max-width:767px){
+    padding-top: 82px;
+    padding-bottom: 77px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  @media screen and (min-width:768px){
+    padding-top: 52px;
+    padding-bottom: 52px;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+
+  @media screen and (min-width:1200px){
+    padding-top: 66px;
+    padding-bottom: 65px;
+    padding-left: 24px;
+   padding-right: 24px;
+  }
+
+  
+}
+
+.title-menu_item {
+  margin: 0;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.55;
+
+  letter-spacing: 0.03em;
+
+ 
+  
+
+  color: #ffffff;
+
+  
+}
+
+.style-title {
+             
+  padding-top: 20px;
+  padding-left: 24px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 2;
+  margin-top: 0;
+  margin-bottom: 4px;
+  color: $title-color;
+  letter-spacing: 0.06em;
+}
+
+.text-item {
+  padding-left: 24px;
+  padding-bottom: 20px;
+  margin: 0;
+
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.87;
+  color: $main-text-color;
+
+  letter-spacing: 0.03em;
 }
