--- a/css/main.css
+++ b/css/main.css
@@ -506,7 +506,7 @@ textarea {
 @media screen and (min-width: 768px) {
   .site-nav__link--active {
     padding-top: 32px;
-    padding-bottom: 29px;
+    padding-bottom: 32px;
   }
 }
 
@@ -1876,6 +1876,26 @@ textarea {
           transform: translateY(0);
 }
 
+@media screen and (max-width: 767px) {
+  .style-chyld:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .style-chyld {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .style-chyld {
+    width: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+}
+
 .title-menu {
   position: absolute;
   overflow: hidden;
@@ -1883,8 +1903,8 @@ textarea {
 
 .title-menu_function {
   background-color: rgba(33, 150, 243, 0.9);
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  -webkit-transform: translateY(101%);
+          transform: translateY(101%);
   -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
