--- a/sass/components/portfolio/_portfolio-projeckt.scss
+++ b/sass/components/portfolio/_portfolio-projeckt.scss
@@ -18,7 +18,6 @@
   position: relative;
   margin: 14px;
   border: 1px solid #eeeeee;
-
   &:hover {
     border: 1px solid #eeeeee;
     box-sizing: border-box;
@@ -28,6 +27,21 @@
 
   &:hover .title-menu_function {
     transform: translateY(0);
+  }
+  &:not(:last-child) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
   }
 }
 
@@ -39,7 +53,7 @@
 .title-menu_function {
   background-color: rgba(33, 150, 243, 0.9);
 
-  transform: translateY(100%);
+  transform: translateY(101%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 320px) {
